[package]
name = "rust-iperf"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/server.rs"
name = "server"

[[bin]]
path = "src/kcp_server.rs"
name = "kcp_server"

[[bin]]
path = "src/client.rs"
name = "client"

[[bin]]
path = "src/kcp_client.rs"
name = "kcp_client"

[dependencies]
argparse = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.0"
pbr = "1.0"
kcp = "0.4"
